--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,23 +25,29 @@ include_trailing_comma = true
 force_grid_wrap = 2
 
 [tool.poetry]
-name = "Django core project"
+name = "Index lab - The Beatles"
 version = "0.1.0"
 description = ""
 authors = ["Piwero <piwero@gmail.com>"]
 
 [tool.poetry.dependencies]
+Django = "^4.1.7"
+djangorestframework = "^3.14.0"
+drf-spectacular = "^0.25.1"
 python = "^3.9"
 python-decouple = "^3.7"
-Django = "^4.1.7"
+
 
 [tool.poetry.dev-dependencies]
 black = "^23.1"
+flake9 = "3.8.3.post2"
 ipdb = "^0.13.11"
 isort = "^5.12.0"
-flake9 = "3.8.3.post2"
-pre-commit = "^3.1.0"
+pre-commit = "^2.20.0"
 pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+pytest-django = "^4.5.2"
+pytest-xdist = "^3.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
