--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ python-decouple = "^3.7"
 
 [tool.poetry.dev-dependencies]
 black = "^23.1"
+django-extensions = "^3.2.1"
 flake9 = "3.8.3.post2"
 ipdb = "^0.13.11"
 isort = "^5.12.0"
